# sigmapilot-mcp

./: .env.example  .gitignore  LICENSE  Makefile  Procfile  README.md  TODO_BLOCKERS.md  main.py  nixpacks.toml  package.json  pyproject.toml  railway.json  test_api.py  test_bitget.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: CONTRIBUTING.md  EXAMPLES.md  INSTALLATION.md  LAUNCH_STRATEGY.md  REMOTE_DEPLOYMENT.md  TODO.md
src/sigmapilot_mcp/: __init__.py  server.py
src/sigmapilot_mcp/core/: __init__.py  confidence.py  data_loader.py  errors.py  sanitize.py  schemas.py  timeframes.py
src/sigmapilot_mcp/core/services/: indicators.py  screener_provider.py  tools.py
src/sigmapilot_mcp/core/utils/: auth.py  validators.py
src/sigmapilot_mcp/engines/: __init__.py  chan_theory.py  chart_patterns.py  dow_theory.py  elliott_wave.py  harmonic.py  ichimoku.py  market_profile.py  vsa.py  wyckoff.py
src/tradingview_mcp/: __init__.py  server.py
src/tradingview_mcp/core/services/: coinlist.py  screener_provider.py
src/tradingview_mcp/core/utils/: validators.py
tests/: __init__.py  conftest.py  test_auth.py  test_coinlist.py  test_indicators.py  test_main.py  test_new_indicators.py  test_screener_provider.py  test_server.py  test_tools.py  test_validators.py
tests/fixtures/deterministic_ohlcv/: btc_1h_uptrend.csv  btc_double_top.csv  btc_wyckoff_accumulation.csv  eth_4h_downtrend.csv  eth_head_shoulders.csv  fixture_spec.md  sol_1d_range.csv  sol_double_bottom.csv
tests/integration/: __init__.py  test_pattern_detection.py
tests/unit/: __init__.py  test_confidence.py  test_dow_theory.py  test_engine_edge_cases.py  test_engines.py  test_sanitize.py  test_schemas.py  test_tier2_engines.py  test_timeframes.py
