[project]
name = "tradingview-mcp"
version = "1.0.0"
description = "Model Context Protocol server exposing crypto screener tools (TradingView Screener)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.12.0",
  "tradingview-screener>=0.6.4",
  "tradingview-ta>=3.3.0",
  "python-dotenv>=1.0.0",
  "mcp-oauth>=0.0.5",
  "httpx>=0.27.0",
  "PyJWT[crypto]>=2.8.0",
]

[project.scripts]
# Entry point now points to packaged module
tradingview-mcp = "tradingview_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tradingview_mcp = ["coinlist/*.txt"]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
